--- a/stylesheets/sass/index.sass
+++ b/stylesheets/sass/index.sass
@@ -1,4 +1,8 @@
-
 @import 'variable'
-
+@import 'base'
+@import 'layout'
+@import 'status'
+@import 'module/button'
+@import 'module/title'
+@import 'module/choice'
 html
