--- a/stylesheets/sass/index.sass
+++ b/stylesheets/sass/index.sass
@@ -1,4 +1,8 @@
-
+@import 'base'
+@import 'layout'
 @import 'variable'
 
-html
+@import 'modules/button'
+@import 'modules/board'
+@import 'modules/footer'
+@import 'modules/header'
