--- a/stylesheets/scss/index.css
+++ b/stylesheets/scss/index.css
@@ -28,25 +28,25 @@ main {
   background: #eee;
 }
 
-table,
-td {
+.grid,
+.square {
   border: 1px solid #000;
 }
 
-table {
+.grid {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-collapse: collapse;
   border-spacing: 2px;
 }
 
-td {
+.square {
   width: 5rem;
   height: 5rem;
   position: relative;
 }
 
-td.circle::before {
+.square.circle::before {
   content: '';
   position: absolute;
   top: 50%;
@@ -59,7 +59,7 @@ td.circle::before {
   border-radius: 50%;
 }
 
-td.cross:before {
+.square.cross:before {
   content: '';
   position: absolute;
   top: 50%;
@@ -71,7 +71,7 @@ td.cross:before {
   background: grey;
 }
 
-td.cross:after {
+.square.cross:after {
   content: '';
   position: absolute;
   top: 50%;
@@ -83,7 +83,7 @@ td.cross:after {
   background: grey;
 }
 
-td.is-clicked {
+.square.is-clicked {
   pointer-events: none;
 }
 /*# sourceMappingURL=index.css.map */
