migrate from node-sass to sass

--- a/stylesheets/sass/index.sass
+++ b/stylesheets/sass/index.sass
@@ -1,9 +1,9 @@
 
-@import 'variable'
-@import 'base'
-@import 'layout'
-@import 'modules/table'
-@import 'modules/turn'
-@import 'modules/button'
-@import 'modules/footer'
+@use 'variable'
+@use 'base'
+@use 'layout'
+@use 'modules/table'
+@use 'modules/turn'
+@use 'modules/button'
+@use 'modules/footer'
 
