--- a/stylesheets/sass/base.sass
+++ b/stylesheets/sass/base.sass
@@ -1,3 +1,4 @@
+@use 'variable' as v
 
 html
     font-family: 'Lato', 'Lucida Grande', 'Lucida Sans Unicode', Tahoma, Sans-Serif
@@ -8,7 +9,7 @@ html
 body
   padding: 0
   margin: 0
-  background: $bg-color
+  background: v.$bg-color
 
 *, *:before, *:after
   box-sizing: border-box
